Fix broken CSS file, not my fault.

--- a/res/smw/util/ext.smw.modal.css
+++ b/res/smw/util/ext.smw.modal.css
@@ -63,7 +63,7 @@
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
-    animation-duration: 0.4s
+    animation-duration: 0.4s;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid rgba(27,31,35,0.25);
